# chemInteractions

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TECHNICAL_DOC.md  docker-compose.yml
.sqlx/: query-2c8b930283280a520c769bac330fc802ac3e640c986ae6c8b403b863ba3846cc.json  query-3d7cb3b70ffd5fb93fdc8c41610a76320a95b8cd7d5247c084465fe5cd13f244.json  query-5bc65348e1f20652ef78f229ef8d053ac3e7bd83e34746b9e0128fd5d36f82db.json  query-ccbca3de7b0a37a32ffb9d637b214754d5ac417f3248933e7233014bbd9d4891.json
frontend/: index.html
frontend/scripts/: api.js  main.js  ui.js
frontend/styles/: style.css
knowledge_base/: functional_groups.json  organic.json
models/: config.json  tokenizer_config.json
plans/: 00_overview.md  01_rust_project_setup.md  02_knowledge_base.md  03_pubchem_integration.md  04_ml_brain.md  05_rule_brain.md  06_fusion_layer.md  07_explainer_byproducts.md  08_api_design.md  09_frontend.md  10_testing_validation.md
scripts/: export_reactiont5.py  model_meta.txt  requirements_export.txt
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: compound.rs  mod.rs  predict.rs  reactions.rs
src/db/: mod.rs  schema.sql  seed.rs
src/models/: types.rs
src/predictor/: byproducts.rs  explainer.rs  fusion.rs  mod.rs  parser.rs  pubchem.rs  validator.rs
src/predictor/ml_brain/: engine.rs  tokenizer.rs
src/predictor/rule_brain/: db.rs  matcher.rs  mod.rs
tests/: comprehensive_tests.rs
